Fixed some spacing, switch title & link nesting to limit clickable area

--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,11 @@ body {
 .home {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 100vh;
-  /* background: linear-gradient(90deg, rgba(21,1,4,1) 0%, rgba(13,1,2,1) 0%, rgba(73,5,15,1) 7%, rgba(16,1,3,1) 11%, rgba(90,6,18,1) 15%, rgba(6,0,1,1) 22%, rgba(54,3,11,1) 25%, rgba(0,0,0,0.9763304980195203) 30%, rgba(91,6,18,1) 36%, rgba(30,2,6,1) 40%, rgba(98,6,19,1) 46%, rgba(0,0,0,1) 51%, rgba(84,6,17,1) 57%, rgba(38,3,8,1) 60%, rgba(23,2,5,1) 65%, rgba(90,6,18,1) 71%, rgba(6,0,1,1) 76%, rgba(67,4,14,1) 79%, rgba(35,3,7,1) 84%, rgba(77,5,16,1) 89%, rgba(23,2,5,1) 96%); */
+  overflow: hidden;
+
   background: rgb(21, 1, 4);
   background: -moz-linear-gradient(
     90deg,
@@ -126,6 +128,7 @@ body {
   display: flex;
   flex-direction: column;
   color: black;
+  margin: 2em 0em;
   /* width: 100%; */
 
   background-color: #464040;
@@ -137,7 +140,7 @@ body {
   -moz-box-shadow: 5px 5px 21px rgba(255, 226, 122, 0.5);
 }
 
-#title h1 {
+#title {
   margin: 0em;
   padding: 1.5em 0em;
   color: white;
@@ -150,7 +153,12 @@ body {
   background-color: black;
   box-shadow: 0px 9px 20px 0px rgba(173, 162, 142, 1);
 }
-#title:hover {
+
+#title a {
+  color: white;
+}
+
+#title a:hover {
   text-decoration: none;
 }
 
@@ -190,7 +198,7 @@ body {
   flex-direction: column;
 }
 .Searchbar span {
-  padding: 0.5em;
+  padding-top: 2em;
 }
 
 .Searchbar span input,
@@ -238,7 +246,7 @@ body {
 }
 
 .singleResult {
-  border: black dotted;
+  /* border: black dotted; */
   align-items: center;
   display: grid;
   grid-template-rows: 3fr 1fr;
